Frankbelford/uatv1ba/force-app/main/default/objects/StagingShift__c/StagingShift__c.object-meta.xml
<CustomObject>
    <label>Staging Shift</label>
    <nameField>
        <label>Staging Shift</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Staging Shifts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>