Frankbelford/uatv1ba/force-app/main/default/objects/StagingShift__c/fields/Staging_Job_Order__c.field-meta.xml
<CustomField>
    <fullName>Staging_Job_Order__c</fullName>
    <label>Staging Job Order</label>
    <referenceTo>StagingJobOrder__c</referenceTo>
    <relationshipLabel>Staging Shifts</relationshipLabel>
    <relationshipName>Staging_Shifts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>