Frankbelford/uatv1ba/force-app/main/default/objects/StagingShift__c/fields/StgClientID__c.field-meta.xml
<CustomField>
    <fullName>StgClientID__c</fullName>
    <label>StgClientID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>