Frankbelford/uatv1ba/force-app/main/default/objects/StagingShift__c/fields/StgClientName__c.field-meta.xml
<CustomField>
    <fullName>StgClientName__c</fullName>
    <label>StgClientName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>