Frankbelford/uatv1ba/force-app/main/default/objects/StagingShift__c/fields/StgFrontOfficeIntegrationSystemEntity__c.field-meta.xml
<CustomField>
    <fullName>StgFrontOfficeIntegrationSystemEntity__c</fullName>
    <label>StgFrontOfficeIntegrationSystemEntity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>