Frankbelford/uatv1ba/force-app/main/default/objects/StagingShift__c/fields/StgPlacement__c.field-meta.xml
<CustomField>
    <fullName>StgPlacement__c</fullName>
    <label>StgPlacement</label>
    <length>255</length>
    <type>Text</type>
</CustomField>