Frankbelford/uatv1ba/force-app/main/default/objects/StagingShift__c/fields/StgRoleEndDate__c.field-meta.xml
<CustomField>
    <fullName>StgRoleEndDate__c</fullName>
    <label>StgRoleEndDate</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>