Frankbelford/uatv1ba/force-app/main/default/objects/StagingShift__c/fields/StgRoleId__c.field-meta.xml
<CustomField>
    <fullName>StgRoleId__c</fullName>
    <label>StgRoleId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>