Frankbelford/uatv1ba/force-app/main/default/objects/StagingShift__c/fields/StgRoleStartDate__c.field-meta.xml
<CustomField>
    <fullName>StgRoleStartDate__c</fullName>
    <label>StgRoleStartDate</label>
    <length>255</length>
    <type>Text</type>
</CustomField>