Frankbelford/uatv1ba/force-app/main/default/objects/StagingShift__c/fields/StgSector__c.field-meta.xml
<CustomField>
    <fullName>StgSector__c</fullName>
    <label>StgSector</label>
    <length>255</length>
    <type>Text</type>
</CustomField>