Frankbelford/uatv1ba/force-app/main/default/objects/StagingShift__c/fields/StgShiftEndTime__c.field-meta.xml
<CustomField>
    <fullName>StgShiftEndTime__c</fullName>
    <label>StgShiftEndTime</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>