Frankbelford/uatv1ba/force-app/main/default/objects/StagingShift__c/fields/StgShiftId__c.field-meta.xml
<CustomField>
    <fullName>StgShiftId__c</fullName>
    <label>StgShiftId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>