Frankbelford/uatv1ba/force-app/main/default/objects/StagingShift__c/fields/StgShiftStartTime__c.field-meta.xml
<CustomField>
    <fullName>StgShiftStartTime__c</fullName>
    <label>StgShiftStartTime</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>