Frankbelford/uatv1ba/force-app/main/default/objects/StagingShift__c/fields/StgShiftStatus__c.field-meta.xml
<CustomField>
    <fullName>StgShiftStatus__c</fullName>
    <label>StgShiftStatus</label>
    <length>255</length>
    <type>Text</type>
</CustomField>