Frankbelford/uatv1ba/force-app/main/default/objects/StagingShift__c/fields/StgUpdatedDate__c.field-meta.xml
<CustomField>
    <fullName>StgUpdatedDate__c</fullName>
    <label>StgUpdatedDate</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>