Frankbelford/uatv1ba/force-app/main/default/objects/StagingShift__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>StgSourceSystem__c</columns>
    <columns>StgClientName__c</columns>
    <columns>StgClientID__c</columns>
    <columns>StgRoleId__c</columns>
    <columns>StgShiftId__c</columns>
    <columns>StgJobTitle__c</columns>
    <columns>StgQuantity__c</columns>
    <columns>StgRoleStartDate__c</columns>
    <columns>StgRoleEndDate__c</columns>
    <columns>StgShiftStartTime__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Records</label>
</ListView>